// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DetailSpec should render items 1`] = `
<View
  style={
    Array [
      Object {
        "flex": 1,
        "flexDirection": "column",
        "marginTop": 64,
      },
    ]
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "column",
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#AD1457",
          "flex": 0.4,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 0.5,
            "flexDirection": "column",
            "justifyContent": "center",
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#FFFFFF",
              "fontSize": 30,
            }
          }
        >
          Weight
        </Text>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 0.5,
            "flexDirection": "row",
            "justifyContent": "center",
          }
        }
      >
        <Button
          name="Send to server"
          onPress={[Function]}
          style={
            Object {
              "flex": 1,
            }
          }
        />
      </View>
    </View>
    <ScrollView
      refreshControl={
        <RefreshControl
          onRefresh={[Function]}
          refreshing={false}
        />
      }
      style={
        Object {
          "backgroundColor": "#FFFFFF",
          "flex": 0.6,
        }
      }
    >
      <Item
        label="Feb 1, 2017"
        onPress={[Function]}
        value="123"
      />
      <Item
        label="Feb 1, 2017"
        onPress={[Function]}
        value="321"
      />
    </ScrollView>
  </View>
</View>
`;

exports[`DetailSpec should render: data error 1`] = `
<View
  style={
    Array [
      Object {
        "flex": 1,
        "flexDirection": "column",
        "marginTop": 64,
      },
    ]
  }
>
  <Text>
    Error getting Data!
  </Text>
</View>
`;

exports[`DetailSpec should render: data unavailable 1`] = `
<View
  style={
    Array [
      Object {
        "flex": 1,
        "flexDirection": "column",
        "marginTop": 64,
      },
    ]
  }
>
  <Text>
    No data available!
  </Text>
</View>
`;
